# personal-stack

./: .dockerignore  .gitignore  .gitleaks.toml  .lintstagedrc.json  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  backup.sh  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.ts  gradle.properties  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit-check.sh  release-please-config.json  renovate.json  settings.gradle.kts  tmp.md  tmp.sh
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.specify.md  speckit.tasks.md
.claude/hooks/: kb-user-prompt-recall.sh  pre-tool-use-git-commit-capture.sh
.codex/: hooks.json
.codex/hooks/: kb-stop-digest.sh  kb-user-prompt-recall.sh
.github/: dependabot.yml
.github/scripts/: bootstrap-nomad-ci.sh  dump-compose-ci-diagnostics.sh  dump-nomad-ci-diagnostics.sh  nomad-ci-lib.sh  seed-stalwart-ci.sh  start-system-test-stack.sh  validate-nomad-health.sh  verify-system-test-migrations.sh  wait-for-system-test-routes.sh
.github/workflows/: build-and-publish.yml  ci.yml  contract-validate.yml  crac-train.yml  deploy.yml  fast.yml  full.yml  migration-guard.yml  nightly.yml  nomad-health.yml  platform-validate.yml  prod-smoke.yml  release.yml  system-tests.yml  (+1 more)
.specify/: .agent-kit-sdd-seed.sha256
backups/: .gitignore  README.md  audit-excluded-paths.txt  manifest.tsv
build-logic/: build.gradle.kts  settings.gradle.kts
docs/: agents-spec-driven-development.md
gradle/: libs.versions.toml
infra/: repair-server.sh
platform/: README.md  flake.nix
services/knowledge-curator/: Dockerfile  README.md  pyproject.toml
services/knowledge-curator/src/curator/: __init__.py  __main__.py  audit.py  backfill_embeddings.py  classify.py  embed.py  indexes.py  lightrag.py  ollama_router.py  projects.py  promote.py  recall.py  reclassify.py  relations.py  renormalise.py  settings.py  store.py  telemetry.py  topics.py  ulid.py  vault.py
services/knowledge-curator/src/curator/maintenance/: __init__.py  title_quality.py
services/knowledge-curator/src/curator/orchestrator/: __init__.py  __main__.py  protocol.py  runner.py
services/knowledge-curator/src/curator/orchestrator/passes/: __init__.py  inbox.py  needs_review_drain.py  relation_enrichment.py  tag_reclassification.py  title_quality.py
services/knowledge-curator/tests/unit/: test_audit.py  test_backfill_embeddings.py  test_classify.py  test_embed.py  test_indexes.py  test_lightrag.py  test_ollama_router.py  test_orchestrator.py  test_orchestrator_passes.py  test_orchestrator_passes_round2.py  test_projects.py  test_promote.py  test_promote_project_scope.py  test_recall.py  test_reclassify.py  test_relations.py  test_renormalise.py  test_settings.py  test_store.py  test_telemetry.py  test_title_quality.py  test_topics.py  test_ulid.py  test_vault.py
(+1490 files in other folders)
