[project]
name = "knowledge-curator"
version = "0.1.0"
description = "Periodic agent that classifies inbox captures via local Ollama, dedups against existing kb_notes, and promotes them to topics/<topic>/<slug>.md or projects/<repo>/<slug>.md."
requires-python = ">=3.12"
dependencies = [
  # HTTP client for the Ollama OpenAI-compatible /v1/ endpoint and the
  # knowledge-api recall path. Pinned >=0.27 for the trust_env+httpx-mock
  # combo the tests rely on.
  "httpx>=0.27.0,<1",
  # Pydantic for the JSON-schema-constrained classification response.
  # The schema we hand to Ollama via `response_format` is generated
  # from this model, so the two stay in lock-step.
  "pydantic>=2.9.0,<3",
  # Structured logging — same JSON shape as the rest of the stack.
  "structlog>=24.4.0,<26",
  # OpenTelemetry SDK + auto-instrumentation. Run via
  # `opentelemetry-instrument python -m curator` and httpx + logging
  # spans appear in Tempo alongside knowledge-api / worker traces.
  "opentelemetry-distro>=0.48b0,<0.60",
  "opentelemetry-exporter-otlp>=1.27.0,<2",
  "opentelemetry-instrumentation-httpx>=0.48b0,<0.60",
  # Postgres driver for kb_notes UPDATEs + kb_relations INSERTs.
  "psycopg[binary,pool]>=3.2.0,<4",
  # Git ops on the vault clone. Same library the worker uses; the
  # safe.directory env override applied to the worker manifest applies
  # here too via the shared PVC.
  "gitpython>=3.1.50",
  # Closed topic vocabulary is loaded from a yaml file at boot.
  "pyyaml>=6.0.2,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-cov>=5.0.0,<7",
  "pytest-timeout>=2.3.0,<3",
  "pytest-asyncio>=0.24.0,<2",
  "ruff>=0.6.0,<1",
  "mypy>=1.11.0,<2",
  # Testcontainers for the integration-test Postgres. Ollama is
  # mocked via respx since pulling a 14B model into a test container
  # is unreasonable.
  "testcontainers[postgres]>=4.8.0,<5",
  "respx>=0.21.1,<1",
  "types-PyYAML>=6.0.12,<7",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires Docker (Testcontainers); slower",
]
addopts = "-q --strict-markers --strict-config --timeout=60 -m 'not integration'"

[tool.coverage.run]
source = ["src/curator"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "UP",
  "SIM",
  "ANN",
  "RUF",
]
ignore = [
  "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/curator"]
